--- a/README.Rmd
+++ b/README.Rmd
@@ -13,29 +13,20 @@ knitr::opts_chunk$set(
 )
 ```
 
-# Helios
+# helios
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-Helios is a stochastic, spatially-explicit, individual-based infectious disease transmission model that simulates the effect of far ultra-violet light emitters as a method for curtailing disease transmission. Helios is built using the `individual` package (REF).
+> In ancient Greek religion and mythology, Helios is the god who personifies the Sun.
+
+`helios` is a stochastic individual-based infectious disease transmission model that simulates the effect of far ultra-violet light emitters as a method for curtailing disease transmission.
+`helios` is built using the [`individual`](https://github.com/mrc-ide/individual) package.
 
 ## Installation
 
-You can install the development version of Helios from [GitHub](https://github.com/) with:
+You can install the development version of `helios` from GitHub using:
 
 ``` r
-# install.packages("devtools")
-#devtools::install_github("tbreweric/Helios")
+devtools::install_github("mrc-ide/helios")
 ```
-
-## Example
-
-This is a basic example which shows you how to solve a common problem:
-
-```{r example}
-#library(Helios)
-## basic example code
-```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
