--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# helios
+# helios <img src='images/helios_hex.png' align="right" height="139" />
 
 <!-- badges: start -->
 <!-- badges: end -->
