Improvements to logo generation

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,8 @@ knitr::opts_chunk$set(
 )
 ```
 
-# helios <img src='images/helios_hex.png' align="right" height="139" />
+# helios <img src="man/figures/helios_hex.png" align="right" height="200" style="float:right; height:200px;">
+
 
 <!-- badges: start -->
 <!-- badges: end -->
@@ -21,7 +22,7 @@ knitr::opts_chunk$set(
 > In ancient Greek religion and mythology, Helios is the god who personifies the Sun.
 
 `helios` is a stochastic individual-based infectious disease transmission model that simulates the effect of far ultra-violet light emitters as a method for curtailing disease transmission.
-`helios` is built using the [`individual`](https://github.com/mrc-ide/individual) package.
+`helios` is built using the [`individual`](https://github.com/mrc-ide/individual) package developed at the MRC Centre for Global Infectious Disease Analysis.
 
 ## Installation
 
