--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,8 @@ knitr::opts_chunk$set(
 
 # helios <img src="man/figures/helios_hex.png" align="right" height="200" style="float:right; height:200px;">
 
+> [!WARNING]  
+> Package under active development! All functions may change.
 
 <!-- badges: start -->
 <!-- badges: end -->
