Use badge for WIP rather than WARNING

--- a/README.Rmd
+++ b/README.Rmd
@@ -15,10 +15,8 @@ knitr::opts_chunk$set(
 
 # helios <img src="man/figures/helios_hex.png" align="right" height="200" style="float:right; height:200px;">
 
-> [!WARNING]  
-> Package under active development! All functions may change.
-
 <!-- badges: start -->
+[![Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](https://www.repostatus.org/badges/latest/wip.svg)](https://www.repostatus.org/#wip)
 <!-- badges: end -->
 
 > In ancient Greek religion and mythology, Helios is the god who personifies the Sun.
