--- a/vignettes/helios.Rmd
+++ b/vignettes/helios.Rmd
@@ -18,8 +18,7 @@ knitr::opts_chunk$set(
 
 ## Introduction {#intro}
 
-`helios` is an R package which allows users to simulate the effect of [far UVC](https://www.nature.com/articles/s41598-018-21058-w) interventions on the spread of infectious disease outbreaks.
-Outbreaks are implemented as individual-level SEIR [compartmental models](https://en.wikipedia.org/wiki/Compartmental_models_in_epidemiology).
+`helios` is an R package which allows users to simulate the impact of [far UVC](https://www.nature.com/articles/s41598-018-21058-w) interventions in curtailing the spread of infectious disease outbreaks.
 In this vignette, we demonstrate basic use of the package.
 
 ```{r setup}
@@ -31,32 +30,48 @@ theme_set(theme_minimal())
 
 ## Parameters {#param}
 
-First, define constant parameters:
+First, define constant parameters.
+In this vignette, we set the `human_population` to 1000.
+Otherwise, we use the default options:
 
 ```{r}
-parameters_list <- get_parameters()
+parameters_list <- get_parameters(list(human_population = 1000))
+```
+
+The names of all parameters are as follows:
+
+```{r}
 names(parameters_list)
 ```
 
 ## Variables {#var}
 
-Next, define model variables:
+Next, we define the model variables:
 
 ```{r}
 variables_list <- create_variables(parameters_list)
 names(variables_list)
 ```
 
-Mostly [`CategoricalVariable`](https://mrc-ide.github.io/individual/reference/CategoricalVariable.html) class:
+Aside from `$leisure`, each entry of `variables_list` is of the [`CategoricalVariable`](https://mrc-ide.github.io/individual/reference/CategoricalVariable.html) class:
 
+```{r}
+lapply(variables_list, class)
 ```
-class(variables_list$disease_state)
-```
+
+Some variables change over time, while other remain fixed.
 
 ### Disease states
 
+Outbreaks are implemented as individual-level SEIR [compartmental models](https://en.wikipedia.org/wiki/Compartmental_models_in_epidemiology).
+
 ```{r}
 (disease_states <- variables_list$disease_state$get_categories())
+```
+
+The number of individuals initially exposed is controlled by `parameters_list$number_initially_exposed`.
+
+```{r}
 disease_state_counts <- purrr::map_vec(disease_states, function(x) variables_list$disease_state$get_size_of(values = x))
 
 data.frame("State" = disease_states, "Count" = disease_state_counts) |>
@@ -64,6 +79,8 @@ data.frame("State" = disease_states, "Count" = disease_state_counts) |>
 ```
 
 ### Age classes
+
+Age classes remain fixed and are as follows:
 
 ```{r}
 (age_classes <- variables_list$age_class$get_categories())
@@ -78,6 +95,8 @@ data.frame(age_classes, age_class_counts) |>
 
 ### Workplaces
 
+Each adult attends a fixed workplace:
+
 ```{r}
 workplaces <- variables_list$workplace$get_categories()
 workplace_sizes <- purrr::map_vec(workplaces, function(x) variables_list$workplace$get_size_of(values = x))
@@ -89,6 +108,8 @@ data.frame(workplace_sizes) |>
 ```
 
 ### Schools
+
+Each child attends a fixed school:
 
 ```{r}
 schools <- variables_list$school$get_categories()
@@ -102,6 +123,8 @@ data.frame(school_sizes) |>
 
 ### Households
 
+Children, adults and elderly people are grouped into fixed households:
+
 ```{r}
 households <- variables_list$household$get_categories()
 household_sizes <- purrr::map_vec(households, function(x) variables_list$household$get_size_of(values = x))
@@ -114,6 +137,8 @@ table(household_sizes) |>
 ```
 
 ### Leisure
+
+Each week, individuals attend lesiure venues:
 
 ```{r}
 leisure_places <- variables_list$leisure$get_values()
@@ -130,4 +155,68 @@ table(number_leisure_places) |>
 
 ```{r}
 events_list <- create_events(variables_list = variables_list, parameters_list = parameters_list)
+names(events_list)
+```
+
+Each event is in the [`TargetedEvent`](https://mrc-ide.github.io/individual/reference/TargetedEvent.html) class:
+
+```{r}
+lapply(events_list, class)
+```
+
+## Render
+
+We use a fixed number of timesteps to simulate over:
+
+```{r}
+timesteps <- round(parameters_list$simulation_time / parameters_list$dt)
+```
+
+The object `renderer` is of class [`Render`](https://mrc-ide.github.io/individual/reference/Render.html):
+
+```{r}
+renderer <- individual::Render$new(timesteps)
+class(renderer)
+```
+
+## Processes
+
+```{r}
+processes_list <- create_processes(
+  variables_list = variables_list,
+  events_list = events_list,
+  parameters_list = parameters_list,
+  renderer = renderer
+)
+
+names(processes_list)
+```
+
+## Simulate
+
+See [`individual::simulation_loop`](https://mrc-ide.github.io/individual/reference/simulation_loop.html):
+
+```{r}
+individual::simulation_loop(
+  variables = variables_list,
+  events = events_list,
+  processes = processes_list,
+  timesteps = timesteps
+)
+```
+
+The output of the simulation is contained within `renderer`, and can be accessed using the `to_dataframe()` method:
+
+```{r}
+states <- renderer$to_dataframe()
+
+states |>
+  tidyr::pivot_longer(cols = ends_with("count"), names_to = "compartment", values_to = "value", names_pattern = "(.*)_count") |>
+  dplyr::mutate(
+    compartment = forcats::fct_relevel(compartment, "S", "E", "I", "R")
+  ) |>
+  ggplot(aes(x = timestep, y = value, col = compartment)) +
+  geom_line() +
+  scale_color_manual(values = c("royalblue3", "firebrick3", "darkorchid3", "orange2")) +
+  labs(x = "Time-step", y = "Count", col = "Compartment")
 ```
