--- a/vignettes/model.Rmd
+++ b/vignettes/model.Rmd
@@ -5,6 +5,7 @@ vignette: >
   %\VignetteIndexEntry{model}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
+bibliography: REFERENCES.bib
 ---
 
 ```{r, include = FALSE}
@@ -16,37 +17,76 @@ knitr::opts_chunk$set(
 )
 ```
 
-This vignette describes the modelling approach used in `helios`.
+This vignette describes the modelling approach used in [`helios`](https://mrc-ide.github.io/helios/).
 For an introduction to practical use of the package, see the [Get started](https://mrc-ide.github.io/helios/articles/helios.html) vignette.
 
 ## Population
 
-The population consists of a fixed number of individuals.
+The population consists of a fixed number of individuals $i = 1, \ldots, N$.
 Each individual has properties.
-Some properties remain constant over time, and others which change.
+Some properties remain constant during the simulation, and others change.
 
-## Age structure
+## Age structure {#age}
 
 The age categories included in the model are children, adults, and the elderly.
 Each individual has a fixed age category, assumed not to change during the simulation, sampled from a categorical distribution at initialisation.
+That is
+$$
+\mathbb{P}(\text{age}_i = k) = p_k, \\
+k \in \{\text{child}, \text{adult}, \text{elderly}\}.
+$$
 
 ## Households
 
 Households are comprised of collections of one or more individuals.
+We consider two approaches.
+
+### Parametric
+
 Household sizes are drawn from a Poisson distribution with rate parameter `mean_household_size`.
 Individuals are assigned to households, ensuring that no household contains only children by pairing an adult to each child assigned to a household without any existing adults.
 
-## Workplaces
+### Bootstrap
 
-Workplaces are attended by adults.
-The sizes of workplaces are drawn from an offset truncated power distribution.
-Assignment of adults to particular workplaces is done using random sampling without replacement.
+In the bootstrap approach, households and age distributions are sampled with replacement from a reference data set.
+The reference data `baseline_household_demographics` are derived from the Office for National Statistics 2011 survey as used by @hinch2021openabm.
+If the bootstrap approach is used, then its resulting age structure will overwrite the categorical age structure.
 
 ## Schools
 
-Schools are attended by children.
-The sizes of schools are drawn from a log-normal distribution.
+All children attend schools.
+Two approaches to the number of children attending each school are considered.
+
+### Parametric
+
+In the parametric approach, the sizes of schools are drawn from a log-normal distribution with mean $\mu$ and variance $\sigma^2$
+$$
+N^\text{school}_j \sim \text{Lognormal}(\mu, \sigma^2).
+$$
+Schools $j$ are drawn until $\sum_j N^\text{school}_j \geq N^\text{child}$.
+The final school size is adjusted such that the sum of school sizes corresponds to the number of children.
 Assignment of children to particular schools is  done using random sampling without replacement.
+
+### Bootstrap
+
+In the bootstrap approach, school sizes are sampled with replacement from a reference data set.
+The reference data `schools_england` are obtained from the 2022/23 census of schools in England.
+
+### School staff
+
+A small number of adults attend schools as staff.
+Each school has a fixed staff to student ratio, with the number of staff rounded up to ensure an integer.
+
+## Workplaces
+
+Workplaces are attended by adults who are not school staff.
+The sizes of workplaces are drawn from an offset truncated power distribution.
+$$
+N^\text{workplace}_j \sim \cdots.
+$$
+Similarly to the school sizes, workplace sizes are drawn until their sum exceeds the number of adults who are not school staff.
+The final workplace is then adjusted downward.
+Assignment of adults to particular workplaces is done using random sampling without replacement.
 
 ## Leisure
 
@@ -54,10 +94,6 @@ Leisure venues are attended by all individuals.
 Leisure venue sizes are drawn from a negative binomial distribution.
 The number of leisure visits per person per week is drawn from a Poisson distribution, truncated at 7 corresponding to one leisure visit every day.
 The locations for each individual's leisure visits are sampled without replacement with probability proportional to leisure venue size.
-
-## Community mixing
-
-Overall community mixing is implemented via some mechanism.
 
 ## Interventions
 
@@ -71,17 +107,16 @@ Transitions between states are simulated as follows.
 
 ### Transition from state $S \to E$
 
-The total force of infection $\lambda$ for each individual is a sum of household, workplace, school, leisure, and community specific force of infections
+The total force of infection $\lambda$ for each individual is a sum of household, workplace, school, and leisure specific force of infections
 $$
-\lambda = \lambda_h + \lambda_w + \lambda_s + \lambda_l + \lambda_c.
+\lambda = \lambda_h + \lambda_w + \lambda_s + \lambda_l.
 $$
 The location specific force of infection terms are given as:
 
-* Household $\lambda_h$: ...
-* Workplace  $\lambda_w$: ...
-* School $\lambda_s$: ...
-* Leisure $\lambda_l$: ...
-* Community $\lambda_c$: ...
+* Household $\lambda_h$: proportional to the number of infectious individuals in the household multiplied by `beta_household`.
+* Workplace  $\lambda_w$: proportional to the number of infectious individuals in the workplace multiplied by `beta_workplace`.
+* School $\lambda_s$: proportional to the number of infectious individuals in the school multiplied by `beta_school`.
+* Leisure $\lambda_l$: proportional to the number of infectious individuals in the leisure setting multiplied by `beta_leisure`.
 
 The probability of infection in a given time step $\delta > 0$ is
 $$
@@ -107,3 +142,5 @@ f = \text{round}(e + 1).
 $$
 where $\upsilon$ is the duration of infectiousness which we set to 4.
 The disease duration $f$ is a number of time steps $\delta$.
+
+## Bibliography {-}
