--- a/vignettes/model.Rmd
+++ b/vignettes/model.Rmd
@@ -29,8 +29,8 @@ Some properties remain constant during the simulation, and others change.
 ## Age structure {#age}
 
 The age categories included in the model are children, adults, and the elderly.
-Each individual has a fixed age category, assumed not to change during the simulation, sampled from a categorical distribution at initialisation.
-That is
+Each individual has a fixed age category, assumed not to change during the simulation.
+The age category is sampled from a categorical distribution at initialisation such that
 $$
 \mathbb{P}(\text{age}_i = k) = p_k, \\
 k \in \{\text{child}, \text{adult}, \text{elderly}\}.
@@ -43,14 +43,18 @@ We consider two approaches.
 
 ### Parametric
 
-Household sizes are drawn from a Poisson distribution with rate parameter `mean_household_size`.
-Individuals are assigned to households, ensuring that no household contains only children by pairing an adult to each child assigned to a household without any existing adults.
+In the parameteric approach, household sizes $N_j^\text{household}$ are drawn from a Poisson distribution with rate parameter $\lambda^\text{household}$
+$$
+N_j^\text{household} \sim \text{Poisson}(\lambda^\text{household}).
+$$
+Individuals are then assigned to households.
+To ensure that no household contains only children, one adult is paired to each child assigned to a household without any existing adults.
 
 ### Bootstrap
 
 In the bootstrap approach, households and age distributions are sampled with replacement from a reference data set.
 The reference data `baseline_household_demographics` are derived from the Office for National Statistics 2011 survey as used by @hinch2021openabm.
-If the bootstrap approach is used, then its resulting age structure will overwrite the categorical age structure.
+If the bootstrap approach is used, then its age structure will overwrite the categorical age structure above.
 
 ## Schools
 
@@ -59,13 +63,14 @@ Two approaches to the number of children attending each school are considered.
 
 ### Parametric
 
-In the parametric approach, the sizes of schools are drawn from a log-normal distribution with mean $\mu$ and variance $\sigma^2$
+In the parametric approach, the sizes of schools are drawn from a log-normal distribution with mean $\mu^\text{school}$ and variance ${\sigma^\text{school}}^2$
 $$
-N^\text{school}_j \sim \text{Lognormal}(\mu, \sigma^2).
+N^\text{school}_j \sim \text{Lognormal}(\mu^\text{school}, {\sigma^\text{school}}^2).
 $$
 Schools $j$ are drawn until $\sum_j N^\text{school}_j \geq N^\text{child}$.
+Any samples $N^\text{school}_j > N^\text{school}_\text{max}  \in \mathbb{N}$ are discarded.
 The final school size is adjusted such that the sum of school sizes corresponds to the number of children.
-Assignment of children to particular schools is  done using random sampling without replacement.
+Assignment of children to particular schools is made using random sampling without replacement.
 
 ### Bootstrap
 
@@ -75,25 +80,33 @@ The reference data `schools_england` are obtained from the 2022/23 census of sch
 ### School staff
 
 A small number of adults attend schools as staff.
-Each school has a fixed staff to student ratio, with the number of staff rounded up to ensure an integer.
+Each school has a fixed staff to student ratio, with the number of staff rounded up to the nearest integer.
 
 ## Workplaces
 
 Workplaces are attended by adults who are not school staff.
-The sizes of workplaces are drawn from an offset truncated power distribution.
+Following @ferguson2005strategies, the sizes of workplaces $N^\text{workplace}_j$ are drawn from an offset truncated power distribution.
+The cumulative distribution function is
 $$
-N^\text{workplace}_j \sim \cdots.
+\mathbb{P}(N^\text{workplace}_j > N) = \frac{\left( \frac{1 + N^\text{workplace}_\text{max} / a}{1 + m / a} \right) ^ c - 1}{(1 + N^\text{workplace}_\text{max} / a)^c - 1}, \quad \text{for } N \leq N^\text{workplace}_\text{max},
 $$
-Similarly to the school sizes, workplace sizes are drawn until their sum exceeds the number of adults who are not school staff.
+where $a > 0, c > 0$ and $N^\text{workplace}_\text{max} \in \mathbb{N}$.
+As with the school sizes, workplace sizes are drawn until their sum exceeds the number of adults who are not school staff.
 The final workplace is then adjusted downward.
 Assignment of adults to particular workplaces is done using random sampling without replacement.
 
 ## Leisure
 
 Leisure venues are attended by all individuals.
-Leisure venue sizes are drawn from a negative binomial distribution.
+Leisure venue sizes are drawn from a negative binomial distribution
+$$
+N^\text{leisure}_j \sim \text{NB}(\mu^\text{leisure}, \kappa^\text{leisure}),
+$$
+with mean $\mu^\text{leisure}$ and overdispersion parameter $\kappa^\text{leisure}$.
+As above, any samples $N^\text{leisure}_j > N^\text{leisure}_\text{max} \in \mathbb{N}$ are discarded and the final sample is adjusted such that $\sum_j N^\text{leisure}_j = N$.
 The number of leisure visits per person per week is drawn from a Poisson distribution, truncated at 7 corresponding to one leisure visit every day.
 The locations for each individual's leisure visits are sampled without replacement with probability proportional to leisure venue size.
+The day of the week that each individual visits each sampled leisure location are also sampled without replacement.
 
 ## Interventions
 
@@ -113,10 +126,10 @@ $$
 $$
 The location specific force of infection terms are given as:
 
-* Household $\lambda_h$: proportional to the number of infectious individuals in the household multiplied by `beta_household`.
-* Workplace  $\lambda_w$: proportional to the number of infectious individuals in the workplace multiplied by `beta_workplace`.
-* School $\lambda_s$: proportional to the number of infectious individuals in the school multiplied by `beta_school`.
-* Leisure $\lambda_l$: proportional to the number of infectious individuals in the leisure setting multiplied by `beta_leisure`.
+* Household $\lambda_h$: proportional to the number of infectious individuals in the household multiplied by $\beta_h$.
+* Workplace  $\lambda_w$: proportional to the number of infectious individuals in the workplace multiplied by $\beta_w$.
+* School $\lambda_s$: proportional to the number of infectious individuals in the school multiplied by $\beta_s$.
+* Leisure $\lambda_l$: proportional to the number of infectious individuals in the leisure setting multiplied by $\beta_l$.
 
 The probability of infection in a given time step $\delta > 0$ is
 $$
