Text for Blueprint first report. Remains to add more figures

--- a/vignettes/REFERENCES.bib
+++ b/vignettes/REFERENCES.bib
@@ -19,3 +19,10 @@
   year={2005},
   publisher={Nature Publishing Group UK London}
 }
+
+@misc{school2023,
+  title = {Schools, pupils and their characteristics: Academic year 2022/23},
+  author = {{School Census Statistics Team}},
+  year = {2023},
+  note = {Retrieved from \url{https://explore-education-statistics.service.gov.uk/find-statistics/school-pupils-and-their-characteristics#contact-us}},
+}
